feat: add hollow text style to the Landing Page Text and more styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,12 @@
 body {
   @apply bg-black text-white
 }
+
+.mohit-khatri-hollow {
+  @apply text-transparent;
+  -webkit-text-stroke: 4px white;
+}
+
+.mohit-khatri {
+  -webkit-text-stroke: 2px white;
+}
