--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,3 +14,27 @@ body {
 .mohit-khatri-hollow {
   @apply  text-transparent;
 }
+
+.scroll-bar::-webkit-scrollbar {
+    height: 8px;
+    width: 8px;
+    background: #000;
+}
+
+.scroll-bar::-webkit-scrollbar-thumb {
+    background: #555;
+    -webkit-border-radius: 1ex;
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
+
+.scroll-bar::-webkit-scrollbar-corner {
+    background: #000;
+}
+
+.invisible-scrollbar {
+  scrollbar-width: none;
+}
+.invisible-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
